[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "example_mrshanas"
version = "0.0.1"
authors = [
    {name="Shanas", email="nassibshaban345@gmail.com"}
]
description = "A package that adds one to a given number"
readme = "README.md"
requires-python = ">3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mrshanas/example-mrshanas"
"Bug Tracker" = "https://github.com/mrshanas/example-mrshanas/issues"